tests/semantic/fail/operator-1.tiger
let
	var a : string := ""
in
	a := (a := 0)
end
